# monte-carlo-attention

./: .gitignore  LICENSE  README.md  modified.py  test.py  utils.py
experiments/qa/: README.md  run_qa.py  run_qa.sh
experiments/text_cls/: exp.py  pretrained.txt  run_cls.sh  run_glue.py
experiments/text_cls/approx/: all_results.json  bert_cola_False_0.0_results.json  bert_cola_True_0.2_results.json  bert_cola_True_0.3_results.json  bert_cola_True_0.4_results.json  bert_cola_True_0.5_results.json  bert_cola_True_0.6_results.json  bert_cola_True_0.7_results.json  bert_cola_True_0.8_results.json  bert_cola_True_1.0_results.json  bert_mnli_False_0.0_results.json  bert_mnli_True_0.2_results.json  bert_mnli_True_0.4_results.json  bert_mnli_True_0.6_results.json  bert_mnli_True_1.0_results.json  bert_mrpc_False_0.0_results.json  bert_mrpc_True_0.2_results.json  bert_mrpc_True_0.3_results.json  bert_mrpc_True_0.4_results.json  bert_mrpc_True_0.5_results.json  bert_mrpc_True_0.6_results.json  bert_mrpc_True_0.7_results.json  bert_mrpc_True_0.8_results.json  bert_mrpc_True_1.0_results.json  bert_qnli_False_0.0_results.json  bert_qnli_True_0.2_results.json  bert_qnli_True_0.4_results.json  bert_qnli_True_0.6_results.json  bert_qnli_True_1.0_results.json  bert_qqp_False_0.0_results.json  bert_qqp_True_0.2_results.json  bert_qqp_True_0.4_results.json  bert_qqp_True_0.5_results.json  (+99 more)
monte_carlo_attention/: .gitignore  CMakeLists.txt  attention.cu  attention.cuh  setup.py  test.cpp  test.h  test.py  torch_ext.cpp
references/: bert.py  multihead_attn.py  simple_model.py
